implement template on WMS

--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -37,18 +37,24 @@
         </ui:define>
 
         <ui:define name="right">
-            <h2> Welcome to WMS System! </h2>
+                     
+            <div class="system-banner wms-system-banner"></div>
+            <div class="system-breadcrumb">
+                <a href="wmsindex.xhtml">WMS home</a>
+            </div>
+            <h2 class="system-welcome"> Welcome to WMS System! </h2>
+            <div class="system-description">
+                <p>With WMS, you can manage your organization’s warehousing processes with ease.</p>
 
-            <p>With WMS, you can manage your organization’s warehousing processes with ease.</p>
+                <p>WMS System empowers your organization to:</p>
 
-            <p>WMS System empowers your organization to:</p>
- 
-            <ol>
-                <li>Manage your warehouse</li>
-                <li>Perform receiving and putaway</li>
-                <li>Perform fulfillment of orders</li>
-                <li>Manage goods flow within your warehouse and between your warehouses</li> 
-            </ol>
+                <ol>
+                    <li>Manage your warehouse</li>
+                    <li>Perform receiving and putaway</li>
+                    <li>Perform fulfillment of orders</li>
+                    <li>Manage goods flow within your warehouse and between your warehouses</li> 
+                </ol>
+            </div>
         </ui:define>
 
     </ui:composition>
