--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -81,7 +81,8 @@
                                 <f:selectItems value="#{createUserManagerBean.roles}" var="role" itemLabel="#{role.roleName}" itemValue="#{role.userRoleId}"/>
                             </p:selectCheckboxMenu>
                         </h:panelGrid>
-                        <div class="col-md-2">
+                        <br/>
+                        <div>
                             <img id="loadingImg" src="img/load.gif" class="loader hide" />
                         </div>
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
