--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -20,6 +20,8 @@
             <c:set var="root" value="${request.contextPath}" />
             <div class="dashboard-content">
                 <div class="row">
+
+                    <div>Please select the relevant services.</div>
                     <div class="dashboard-box">
                         <!--OES-->
                         <c:set var="disableoes" value="true" />
