--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -20,6 +20,7 @@
 
         <!-- Override body -->
         <ui:define name="body">
+            <div class="some-quote-box"><h2>World's Leading 5PL.</h2></div>
             <!-- Background img -->
             <h:panelGroup layout="block" class="bg-img">
                 <div class="wrapper">
